refactorizacion routing tabs rues

--- a/src/app/core/tabs/rues/datos-generales/datos-generales.component.html
+++ b/src/app/core/tabs/rues/datos-generales/datos-generales.component.html
@@ -1,15 +1,23 @@
-<div class="container my-4">
-    <h4>IDENTIFICACIÓN</h4>
-</div>
+<form>
 
-<div class="example-container">
-    <mat-form-field>
-      <input matInput placeholder="Input">
-    </mat-form-field>
-  
-    <mat-form-field>
-      <textarea matInput placeholder="Textarea"></textarea>
-    </mat-form-field>
-  
-    
-  </div>
+    <div class="form-group">
+        <h4>IDENTIFICACIÓN</h4>
+
+        <p><strong>Nombre: </strong> <span>MARTA CECILIA ESPINOSA GARCIA</span> </p>
+
+        <p><strong>CC: </strong> <span>31258651</span> </p>
+
+        <p><strong>NIT: </strong> <span>31258651</span> </p>
+
+        <p><strong>DV: </strong> <span>6</span> </p>
+
+        <mat-form-field class="w-75" color="accent-50">
+            <input matInput placeholder="Input" >
+        </mat-form-field>
+
+        <mat-form-field class="w-75" color="accent">
+            <textarea matInput placeholder="Textarea"></textarea>
+        </mat-form-field>
+    </div>
+
+</form>
