--- a/src/app/core/tabs/tabs.component.html
+++ b/src/app/core/tabs/tabs.component.html
@@ -2,7 +2,7 @@
 
   <mat-sidenav mode="side" opened class="sidenav">
 
-    <div class="nav flex-column">
+    <div class="nav flex-column pl-2">
 
       <button *ngFor="let tab of tabs" [routerLink]="tab.route" routerLinkActive="active" mat-flat-button
         class="btn btn-light  btn-item-nav" >
