--- a/src/app/core/tabs/tabs.component.scss
+++ b/src/app/core/tabs/tabs.component.scss
@@ -24,8 +24,9 @@
 
   @media (min-width: 0px) and (max-width: 767.98px) {
     .sidenav {
-      width: 15vw;
+      width: 17vw;
       .btn-item-nav {
+        padding-right: 2rem;
         p {
           display: none;
         }
@@ -47,7 +48,8 @@
     float: right;
     margin-top: 10px;
     height: 15vh;
-    width: 100%;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
     p {
       margin: 0;
     }
